<resources>
    <string name="app_name">TimeForYourself</string>
    <string name="todo">TODO</string>
    <string name="paradise"> Find your paradise</string>
    <string name="sea_vibes">Sea vibes</string>
    <string name="delightful_morning">Delightful morning</string>
    <string name="the_energy_of_the_forest">The energy of the forest</string>
    <string name="power_of_ocean">Power of ocean</string>
    <string name="find_yourself">Find Yourself</string>
    <string name="evening_calm">Evening calm</string>
    <string name="sounds_of_happiness">Sounds of happiness</string>
    <string name="free_your_mind">Free your mind</string>
    <string name="stay_focused_and_balanced">Stay focused and balanced</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="feedback">Feedback</string>
    <string name="support_us">Support us</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="timerDuration">Timer duration</string>
    <string name="startTimer">Start Timer</string>
    <string name="setATimer">Set a timer</string>
    <string name="Choise">Choice</string>
    <string name="Choice1">Choice1</string>
    <string name="FileName">FileName</string>
    <string-array name="timer">
        <item>Timer off</item>
        <item>Set your own timer</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>15 Minutes</item>
        <item>20 Minutes</item>
        <item>30 Minutes</item>
        <item>40 Minutes</item>
        <item>1 Hour</item>
        <item>2 Hours</item>
        <item>4 hours</item>
        <item>6 Hours</item>
        <item>8 Hours</item>
    </string-array>
    <string-array name="hours">
        <item> 00 </item>
        <item> 01 </item>
        <item> 02 </item>
        <item> 03 </item>
        <item> 04 </item>
        <item> 05 </item>
        <item> 06 </item>
        <item> 07 </item>
        <item> 08 </item>
        <item> 09 </item>
        <item> 10 </item>
        <item> 11 </item>
        <item> 12 </item>
        <item> 13 </item>
        <item> 14 </item>
        <item> 15 </item>
        <item> 16 </item>
        <item> 17 </item>
        <item> 18 </item>
        <item> 19 </item>
        <item> 22 </item>
        <item> 21 </item>
        <item> 22 </item>
        <item> 23 </item>
    </string-array>
    <string-array name="minutes">
        <item> 00 </item>
        <item> 01 </item>
        <item> 02 </item>
        <item> 03 </item>
        <item> 04 </item>
        <item> 05 </item>
        <item> 06 </item>
        <item> 07 </item>
        <item> 08 </item>
        <item> 09 </item>
        <item> 10 </item>
        <item> 11 </item>
        <item> 12 </item>
        <item> 13 </item>
        <item> 14 </item>
        <item> 15 </item>
        <item> 16 </item>
        <item> 17 </item>
        <item> 18 </item>
        <item> 19 </item>
        <item> 20 </item>
        <item> 21 </item>
        <item> 22 </item>
        <item> 23 </item>
        <item> 24 </item>
        <item> 25 </item>
        <item> 26 </item>
        <item> 27 </item>
        <item> 28 </item>
        <item> 29 </item>
        <item> 30 </item>
        <item> 31 </item>
        <item> 32 </item>
        <item> 33 </item>
        <item> 34 </item>
        <item> 35 </item>
        <item> 36 </item>
        <item> 37 </item>
        <item> 38 </item>
        <item> 39 </item>
        <item> 40 </item>
        <item> 41 </item>
        <item> 42 </item>
        <item> 43 </item>
        <item> 44 </item>
        <item> 45 </item>
        <item> 46 </item>
        <item> 47 </item>
        <item> 48 </item>
        <item> 49 </item>
        <item> 50 </item>
        <item> 51 </item>
        <item> 52 </item>
        <item> 53 </item>
        <item> 54 </item>
        <item> 55 </item>
        <item> 56 </item>
        <item> 57 </item>
        <item> 58 </item>
        <item> 59 </item>
    </string-array>
</resources>